--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -2,10 +2,12 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-    <table>
+    <table class="table">
         <thead>
             <th>Name</th>
             <th>BirthDate</th>
@@ -17,6 +19,8 @@
         </tr>
         </tbody>
     </table>
-
+        <form class="form-signin" method="get" th:action="@{/logout}">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
+        </form>
 </body>
 </html>
